# pokebot

./: .dir-locals.el  .gitignore  AAction_8cpp.html  AAction_8cpp__incl.map  AAction_8cpp__incl.md5  AAction_8hh.html  AAction_8hh__dep__incl.map  AAction_8hh__dep__incl.md5  AAction_8hh__incl.map  AAction_8hh__incl.md5  AAction_8hh_source.html  Args_8cpp.html  Args_8cpp__incl.map  BagMenu_8hh.html  BagMenu_8hh__dep__incl.map  BagMenu_8hh__dep__incl.md5  BagMenu_8hh_source.html  BattleData_8cpp.html  BattleData_8cpp__incl.map  BattleData_8hh.html  BattleData_8hh__dep__incl.map  BattleData_8hh__dep__incl.md5  BattleData_8hh__incl.md5  BattleData_8hh_source.html  BattleGroup_8hpp.html  BattleGroup_8hpp__dep__incl.map  BattleGroup_8hpp__dep__incl.md5  BattleGroup_8hpp__incl.md5  BattleGroup_8hpp_source.html  BattleMenu_8hh.html  BattleMenu_8hh__dep__incl.map  BattleMenu_8hh__dep__incl.md5  BattleMenu_8hh__incl.md5  BattleMenu_8hh_source.html  Battle_8cpp.html  Battle_8cpp__incl.map  Battle_8cpp__incl.md5  Battle_8hh.html  Battle_8hh__dep__incl.md5  Battle_8hh__incl.map  (+471 more)
doc/: Doxyfile  design.md
doc/html/: AAction_8cpp.html  AAction_8cpp__incl.map  AAction_8cpp__incl.md5  AAction_8hh.html  AAction_8hh__dep__incl.map  AAction_8hh__dep__incl.md5  AAction_8hh__incl.map  AAction_8hh__incl.md5  AAction_8hh_source.html  Args_8cpp.html  Args_8cpp__incl.map  Args_8cpp__incl.md5  BagMenu_8hh.html  BagMenu_8hh__dep__incl.map  BagMenu_8hh__dep__incl.md5  BagMenu_8hh__incl.map  BagMenu_8hh__incl.md5  BagMenu_8hh_source.html  BattleData_8cpp.html  BattleData_8cpp__incl.map  BattleData_8cpp__incl.md5  BattleData_8hh.html  BattleData_8hh__dep__incl.map  BattleData_8hh__dep__incl.md5  BattleData_8hh__incl.map  BattleData_8hh__incl.md5  BattleData_8hh_source.html  BattleGroup_8hpp.html  BattleGroup_8hpp__dep__incl.map  BattleGroup_8hpp__dep__incl.md5  BattleGroup_8hpp__incl.map  BattleGroup_8hpp__incl.md5  BattleGroup_8hpp_source.html  BattleMenu_8hh.html  BattleMenu_8hh__dep__incl.map  BattleMenu_8hh__dep__incl.md5  BattleMenu_8hh__incl.map  BattleMenu_8hh__incl.md5  BattleMenu_8hh_source.html  Battle_8cpp.html  (+420 more)
doc/html/search/: all_12.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  classes_0.js  classes_1.js  classes_4.js  classes_6.js  classes_8.js  defines_7.js  defines_8.js  enums_0.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_1.js  files_2.js  files_4.js  files_5.js  files_6.js  files_8.js  functions_0.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_4.js  functions_6.js  functions_8.js  functions_b.js  functions_d.js  functions_e.js  namespaces_0.js  variables_12.js  (+10 more)
include/: AAction.hh  Action.hh  ActionBattle.hh  ActionMoveCursor.hh  ActionMoveTo.hh  ActionPressButton.hh  Bag.hh  BagMenu.hh  BattleData.hh  BattleGroup.hpp  BattleMenu.hh  Bot.hh  BotUtils.hh  Config.hh  Data.hh  IAction.hh  IPokeData.hh  Item.hh  Lua.hh  Move.hh  Movement.hh  Moves.hh  MultiChoice.hh  OverWorld.hh  PathFinder.hh  Player.hh  PokeScript.hh  PokemonData.hh  PokemonUtils.hh  PrintUtils.hh  Script.hh  Species.hh  StartMenu.hh  Team.hpp  Thumb.hh  ThumbDisas.hh  VM.hh  World.hh
include/Action/: AAction.hh  Battle.hh  ChangeMap.hh  LuaClass.hh  MoveCursor.hh  MoveTo.hh  PressButton.hh  TalkTo.hh  TurnDirection.hh  UseConnection.hh  UseWarp.hh  Wait.hh
include/LuaBridge/detail/: LuaHelpers.h
lua/: Action.lua  Battle.lua  WalkLoop.lua  Wrapper.lua  listeners.lua  main.lua  onEnterFrame.lua  onInit.lua  script.lua
lua/Action/: Battle.lua  Interaction.lua  Menu.lua  Misc.lua  Movement.lua
lua/Action/Battle/: Attack.lua  Run.lua  Switch.lua
lua/Action/Interaction/: TalkTo.lua
lua/Action/Menu/: Bag.lua  StartMenu.lua
lua/Action/Misc/: MoveCursor.lua  NextFrame.lua  PressButton.lua  Wait.lua
lua/Action/Movement/: Connection.lua  Loop.lua  Step.lua  To.lua  Turn.lua  Warp.lua
lua/Custom/Battle/: SimpleBattleAI.lua
lua/Custom/World/: SimpleWorldAI.lua
lua/Utils/: Bag.lua  Pathfinding.lua  Table.lua  Wrapper.lua
research/: boxes  copyscriptbanks.arm  dowildbattle.arm  setflag.arm  setvar.arm
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  (+59 more)
src/: Action.cpp  ActionBattle.cpp  ActionMoveTo.cpp  BattleData.cpp  Bot.cpp  Data.cpp  Move.cpp  Movement.cpp  Player.cpp  PokeScript.cpp  PokeScriptPrint.cpp  PokemonData.cpp  PokemonUtils.cpp  PrintInstructions.cpp  PrintUtils.cpp  Thumb.cpp  ThumbDisas.cpp  World.cpp  main.cpp
src/Action/: AAction.cpp  Battle.cpp  ChangeMap.cpp  LuaClass.cpp  MoveCursor.cpp  MoveTo.cpp  PressButton.cpp  TalkTo.cpp  TurnDirection.cpp  UseConnection.cpp  UseWarp.cpp  Wait.cpp
src/Bot/: Bot.cpp  PathFinder.cpp  Utils.cpp
src/Data/: BattleData.cpp  Data.cpp  Player.cpp  World.cpp
src/PokeScript/: Args.cpp  Commands.cpp  Context.cpp  Disass.cpp  Executers.cpp  Print.cpp  Readers.cpp  Script.cpp  VM.cpp  VarHooks.cpp
src/Utils/: Breakpoint.cpp  Config.cpp  PokemonUtils.cpp  PrintUtils.cpp  ThumbDisas.cpp
src/lua/: Lua.cpp
tools/: commands_extractor.js  update_doc.sh
vbam/sdl/: SDL.cpp  SDLGlobals.h  debugger.cpp  debugger.h  inputSDL.cpp
